[Chore]: Added production runs