@@ -1,9 +1,20 @@
+import net.fabricmc.loom.task.prod.ClientProductionRunTask
+import net.fabricmc.loom.task.prod.ServerProductionRunTask
+
 plugins {
     id 'idea'
     id "java"
     id "java-library"
     id 'fabric-loom' version '1.10.+' apply false
 }
+
+def debugArgs = [
+    "-enableassertions",
+    "-Dmixin.debug.verify=true",
+    //"-Dmixin.debug.strict=true",
+    "-Dmixin.debug.countInjections=true",
+    "-XX:+AllowEnhancedClassRedefinition"
+]
 
 idea {
     module {
@@ -13,22 +24,29 @@ idea {
 }
 
 repositories {
+    mavenLocal()
+    mavenCentral()
+
     maven {
         name = 'ParchmentMC'
         url = 'https://maven.parchmentmc.org'
     }
 
-    maven { url = "https://maven.fabricmc.net/" } // FAPI, Loader
+    maven { // FAPI, Loader
+        url = "https://maven.fabricmc.net/"
+        content {
+            excludeGroup "net.fabricmc.fabric-api"
+        }
+    }
     maven { url = "https://maven.quiltmc.org/repository/release" } // QM
 
-    maven { url = "https://maven.terraformersmc.com/releases/" } // ModMenu, Emi
-    maven { url = "https://maven.shedaniel.me/" } // REI and deps
-    maven { url = "https://maven.ladysnake.org/releases" } // CCA, for Trinkets
-    maven { url = "https://modmaven.dev" } // Jei
-    maven {
-        name = "Fuzs Mod Resources"
-        url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
+    maven { // placeholder api for ModMenu
+        name = "Nucleoid"
+        url = "https://maven.nucleoid.xyz/"
     }
+    maven { url = "https://maven.terraformersmc.com/" } // ModMenu, Emi
+    maven { url = "https://maven.shedaniel.me/" } // REI and deps
+    maven { url = "https://modmaven.dev" } // Jei
     exclusiveContent {
         forRepository {
             maven {
@@ -40,10 +58,36 @@ repositories {
             includeGroup "maven.modrinth"
         }
     }
+    exclusiveContent {
+        forRepository {
+            maven {
+                name "CurseForge"
+                url "https://cursemaven.com"
+            }
+        }
+        filter {
+            includeGroup "curse.maven"
+        }
+    }
+    maven { url = "https://maven.ladysnake.org/releases" } // CCA, for Trinkets
+    maven { url = 'https://maven.wispforest.io/releases' } // Accessories
 }
 
 allprojects {
     apply plugin: "fabric-loom"
+}
+
+configurations {
+    productionMods {
+        transitive = false
+    }
+}
+
+configurations.configureEach {
+    resolutionStrategy {
+        force "net.fabricmc:fabric-loader:$project.loader_version"
+        force "net.fabricmc.fabric-api:fabric-api:$project.fabric_version"
+    }
 }
 
 dependencies {
@@ -55,11 +99,13 @@ dependencies {
 
     modImplementation("net.fabricmc:fabric-loader:$project.loader_version")
     modImplementation("net.fabricmc.fabric-api:fabric-api:$project.fabric_version")
+    productionMods("net.fabricmc.fabric-api:fabric-api:$project.fabric_version")
 
     implementation("javax.annotation:javax.annotation-api:1.3.2")
     implementation("com.google.code.findbugs:jsr305:3.0.2")
 
     modLocalRuntime("com.terraformersmc:modmenu:$project.modmenu_version")
+    productionMods("com.terraformersmc:modmenu:$project.modmenu_version")
 
     modLocalRuntime("dev.emi:trinkets:$project.trinkets_version")
 
@@ -73,6 +119,12 @@ dependencies {
 }
 
 loom {
+    runtimeOnlyLog4j = true
+
+    mixin {
+        useLegacyMixinAp = false
+    }
+
     runs {
         client {
             client()
@@ -80,10 +132,45 @@ loom {
             configName = "Minecraft Client ${project.minecraft_version}"
             runDir "run/${project.minecraft_version}/client"
 
-            property("mixin.debug.export=true") // export all mixins
-            property("mixin.debug.strict.unique=true") // strictly enforce that @Unique things are private
-            property("mixin.debug.countInjections=true")
-            vmArg("-XX:+AllowEnhancedClassRedefinition")
+            programArg("--username Dev") // set a fixed username for the client
+            if (System.getenv("HOTSWAP_AGENT") != null) {
+                property("fabric.systemLibraries=" + System.getenv("HOTSWAP_AGENT"))
+                vmArg("--add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
+                vmArg("--add-opens=java.base/java.lang=ALL-UNNAMED")
+                vmArg("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
+                vmArg("--add-opens=java.base/java.io=ALL-UNNAMED")
+                vmArg("--add-opens=java.desktop/java.beans=ALL-UNNAMED")
+                vmArg("--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED")
+            }
+
+            try {
+                afterEvaluate {
+                    def mixinDep = this.configurations.compileClasspath.incoming.artifactView {
+                        componentFilter {
+                            it instanceof ModuleComponentIdentifier
+                                    && it.module == "sponge-mixin"
+                        }
+                    }
+
+                    if (mixin != null) {
+                        vmArg("-javaagent:${mixinDep.files.first().path}")
+                        println("[Info]: Mixin Hotswap setup finished")
+                    } else {
+                        println("[Warning]: Unable to locate file path for Mixin jar")
+                    }
+                }
+            } catch (Exception e) {
+                println("[Error]: Mixin Hotswap setup failed!")
+                e.printStackTrace()
+            }
+        }
+        client2 {
+            client()
+
+            configName = "Minecraft Client2 ${project.minecraft_version}"
+            runDir "run/${project.minecraft_version}/client2"
+
+            programArg("--username Dev2") // set a fixed username for the client
             if (System.getenv("HOTSWAP_AGENT") != null) {
                 property("fabric.systemLibraries=" + System.getenv("HOTSWAP_AGENT"))
                 vmArg("--add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
@@ -123,6 +210,10 @@ loom {
             runDir "run/${project.minecraft_version}/server"
         }
     }
+
+    runs.configureEach {
+        vmArgs(debugArgs)
+    }
 }
 
 subprojects {
@@ -143,8 +234,35 @@ subprojects.each { p ->
     loom.mods.register(p.name) {
         sourceSet p.sourceSets.main
     }
+
+    remapJar.dependsOn("${p.path}:remapJar")
 }
 
 tasks.register("fixIntelliJResources") {
     group = 'fabric'
+}
+
+dependencies {
+    subprojects.each {
+        api project(path: "${it.path}", configuration: "namedElements")
+
+        productionMods project(":${it.name}")
+    }
+}
+
+def productionMods = project.files(configurations.productionMods)
+
+tasks.register('runProductionClient', ClientProductionRunTask) {
+    runDir.set(project.layout.getProjectDirectory().dir("run").dir("${project.minecraft_version}_production").dir("client"))
+
+    mods.setFrom productionMods
+    jvmArgs.addAll(debugArgs)
+}
+
+tasks.register('runProductionServer', ServerProductionRunTask) {
+    runDir.set(project.layout.getProjectDirectory().dir("run").dir("${project.minecraft_version}_production").dir("server"))
+
+    mods.setFrom productionMods
+    jvmArgs.addAll(debugArgs)
+    programArgs.add("nogui")
 }
